--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -29,8 +29,30 @@ header.masthead {
       font-size: 2rem;
     }
   }
-  iframe{
+  .iframe {
     opacity: .8;
-    margin-top: 20px;
+    margin-top: 0;
+    height: 540px;
+
+    @media screen and (max-width: 1200px) {
+      height: 640px;
+    }
+
+    @media screen and (max-width: 1024px) {
+      margin-top: 20px;
+      height: 600px;
+    }
+
+    @media screen and (max-width: 526px) {
+      height: 540px;
+    }
+
+    @media screen and (max-width: 428px) {
+      height: 600px;
+    }
+
+    @media screen and (max-width: 374px) {
+      height: 740px;
+    }
   }
 }
